--- a/app/src/main/res/layout/details_header.xml
+++ b/app/src/main/res/layout/details_header.xml
@@ -21,9 +21,9 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="3"
-        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
