--- a/app/src/main/res/layout-v21/book_recycler_item.xml
+++ b/app/src/main/res/layout-v21/book_recycler_item.xml
@@ -13,6 +13,7 @@
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:stateListAnimator="@animator/elevation"
+    android:transitionName="@string/card_transition"
     app:contentPadding="8dp"
     app:cardElevation="2dp">
 
