--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,6 +4,11 @@
     <style name="AppTheme" parent="Base.AppTheme">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowContentTransitions">true</item>
+    </style>
+
+    <style name="DefaultAppTheme" parent="Base.DefaultAppTheme">
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
 </resources>
