--- a/app/src/main/res/layout-v21/activity_main_content.xml
+++ b/app/src/main/res/layout-v21/activity_main_content.xml
@@ -11,6 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:transitionName="@string/toolbar_transition_name"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
